[gd_scene load_steps=2 format=2]

[ext_resource path="res://KeyValuePair.gd" type="Script" id=1]

[node name="Control" type="GraphNode"]
margin_right = 281.0
margin_bottom = 128.0
title = "Key Value"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 265.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 32 )

[node name="Value" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 57.0
margin_right = 265.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 32 )

[node name="KeyValue" type="Label" parent="."]
margin_left = 16.0
margin_top = 90.0
margin_right = 265.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 32 )
[connection signal="close_request" from="." to="." method="_on_Control_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Control_resize_request"]
[connection signal="text_changed" from="Key" to="." method="_on_Key_text_changed"]
[connection signal="text_changed" from="Value" to="." method="_on_Value_text_changed"]
